TRK-109 feat: implements get platforms
