# src/docs/swagger.json
@@ -93,6 +93,24 @@
                 "responses": {}
             }
         },
+        "/api/platforms/data": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "This endpoint displays all platforms",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Plataforms"
+                ],
+                "summary": "Display of all platforms registered",
+                "responses": {}
+            }
+        },
         "/api/projects/data": {
             "get": {
                 "security": [
