# src/pkg/routes/routes.go
@@ -36,6 +36,11 @@ func HandlleRequest() {
 	protected := r.Group("/api")
 	protected.Use()
 	{
+
+		plataforms := protected.Group("/platforms")
+		{
+			plataforms.GET("/data", middleware.Auth(), controller.GetPlatforms)
+		}
 		projects := protected.Group("/projects")
 		{
 			projects.GET("/data", middleware.Auth(), controller.GetProjects)
